# src/main/app/dto/tags.go
@@ -1,0 +1,6 @@
+package dto
+
+type CreateTagRequest struct {
+	Name string `json:"name"`
+	Slug string `json:"slug"`
+}
